--- a/package.json
+++ b/package.json
@@ -3,9 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/carousel": "^5.10.3",
+    "@mantine/core": "^5.10.3",
+    "@mantine/dates": "^5.10.3",
+    "@mantine/dropzone": "^5.10.3",
+    "@mantine/ds": "^5.10.3",
+    "@mantine/form": "^5.10.3",
+    "@mantine/hooks": "^5.10.3",
+    "@mantine/modals": "^5.10.3",
+    "@mantine/notifications": "^5.10.3",
+    "@mantine/nprogress": "^5.10.3",
+    "@mantine/prism": "^5.10.3",
+    "@mantine/spotlight": "^5.10.3",
+    "@mantine/tiptap": "^5.10.3",
+    "@tabler/icons": "^1.119.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-link": "^2.0.0-beta.212",
+    "@tiptap/react": "^2.0.0-beta.212",
+    "@tiptap/starter-kit": "^2.0.0-beta.212",
+    "dayjs": "^1.11.7",
+    "embla-carousel-react": "^7.0.9",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -13,6 +33,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.5",
+    "typescript": "^4.9.5",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
