--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@tiptap/extension-link": "^2.0.0-beta.212",
     "@tiptap/react": "^2.0.0-beta.212",
     "@tiptap/starter-kit": "^2.0.0-beta.212",
+    "caniuse-lite": "^1.0.30001492",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.0.9",
+    "framer-motion": "^10.12.16",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.4.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.5",
