--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.5",
+    "swiper": "^9.3.2",
     "typescript": "^4.9.5",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
